--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_test(NAME field_test COMMAND field_test)
 find_package(Doxygen)
 
 set(DOXYGEN_GENERATE_HTML YES)
+set(DOXYGEN_GENERATE_RTF YES)
 set(DOXYGEN_USE_MATHJAX YES)
 set(DOXYGEN_EXTRACT_PRIVATE YES)
 set(DOXYGEN_OUTPUT_LANGUAGE Russian)
@@ -46,7 +47,7 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/slkscr.ttf DESTINATION ${CMAKE_CURRENT_BIN
 set(CMAKE_INSTALL_DOCDIR ${CMAKE_INSTALL_DATAROOTDIR}/doc/${PROJECT_NAME})
 install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/html/
         DESTINATION ${CMAKE_INSTALL_DOCDIR})
-install(TARGETS field
+install(TARGETS game_of_life
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
